stages/stage5/k8s/infra/postgres/catalog-postgres-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog-postgres-headless
  namespace: apollo11-infra
spec:
  clusterIP: None
  selector:
    app: catalog-postgres
  ports:
    - port: 5432
      targetPort: 5432
