stages/stage5/k8s/infra/postgres/catalog-postgres-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: catalog-postgres-allow-specific
  namespace: apollo11-infra
spec:
  podSelector:
    matchLabels:
      app: catalog-postgres
  policyTypes:
    - Ingress
  ingress:
      - from:
          - namespaceSelector:
              matchLabels:
                name: apollo11-apps
            podSelector:
              matchLabels:
                app: catalog
