stages/stage5/k8s/infra/postgres/circulation-postgres-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: circulation-postgres-allow-specific
  namespace: apollo11-infra
spec:
  podSelector:
    matchLabels:
      app: circulation-postgres
  policyTypes:
    - Ingress
  ingress:
      - from:
          - namespaceSelector:
              matchLabels:
                name: apollo11-apps
            podSelector:
              matchLabels:
                app: circulation
